fix flicker issue after thumbnail change

--- a/assets/src/css/media-library.scss
+++ b/assets/src/css/media-library.scss
@@ -453,7 +453,7 @@
 }
 
 .mejs-poster {
-	background-size: contain;
+	background-size: 0;
     background-color: rgb(0, 0, 0);
 }
 
